--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <meta http-equiv="refresh" content="0; url=https://repo.github.io/folder/index.html">
+  <meta http-equiv="refresh" content="0; url="https://shivampio.github.io/React-task-tracker/public/index.html">
 </head>
 <html>
   <body>
